--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Navbar -->
   <header class="navbar">
     <div class="logo">
-      <img src="assets/logo.png" alt="Myntra Logo">
+      <img src="myntra-brand-logooooo.png" alt="Myntra Logo">
     </div>
     <nav class="menu">
       <a href="#">Men</a>
